Add table reults

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
     <body>
         {# Header #}
         <nav class="navbar navbar-light bg-success">
-          <a class="navbar-brand text-light" href="https://www.sberbank.ru/ru/person">Сбербанк Анкета</a>
+          <a class="navbar-brand text-light" href="/">Сбербанк Анкета</a>
         </nav>
 
         {# Main Content #}
