--- a/templates/profile/result.html.twig
+++ b/templates/profile/result.html.twig
@@ -1,7 +1,86 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div class="col-12 mx-auto">
+    <table class="table table-bordered table-hover">
+        <tread>
+            <tr>
+                <th>Банк</th>
+                <th colspan="2">Сбербанк</th>
+                <th colspan="1">Альфа Банк</th>
+            </tr>
+        </tread>
+        <tbody>
+            <tr>
+                <th>Тариф</th>
+                <th>Сбер 1</th>
+                <th>Сбер 2</th>
+                <th>Альфа 1</th>
+            </tr>
 
-    Hello World!
+            <tr>
+                <th>Стоимость</th>
+                <td>Бесплатно</td>
+                <td>500 руб</td>
+                <td>100 руб</td>
+            </tr>
 
+            <tr>
+                <th>Бесплатное обслуживание</th>
+                <td>Бесплатно</td>
+                <td>500 руб</td>
+                <td>100 руб</td>
+            </tr>
+
+            <tr>
+                <th>Бизнес-карты (годовое обслуживание)</th>
+                <td>Бесплатно</td>
+                <td>500 руб</td>
+                <td>100 руб</td>
+            </tr>
+
+            <tr>
+                <th>Прием на БК/касса</th>
+                <td>Бесплатно</td>
+                <td>500 руб</td>
+                <td>100 руб</td>
+            </tr>
+
+            <tr>
+                <th>Выдача с БК</th>
+                <td>Бесплатно</td>
+                <td>500 руб</td>
+                <td>100 руб</td>
+            </tr>
+
+            <tr>
+                <th>Бесплатные ПП</th>
+                <td>Бесплатно</td>
+                <td>500 руб</td>
+                <td>100 руб</td>
+            </tr>
+
+            <tr>
+                <th>Перевод на ФЛ</th>
+                <td>Бесплатно</td>
+                <td>500 руб</td>
+                <td>100 руб</td>
+            </tr>
+
+            <tr>
+                <th>Выдача по чеку</th>
+                <td>Бесплатно</td>
+                <td>500 руб</td>
+                <td>100 руб</td>
+            </tr>
+
+            <tr>
+                <th>Комментарии</th>
+                <td>Бесплатно</td>
+                <td>500 руб</td>
+                <td>100 руб</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 {% endblock body %}
