--- a/templates/profile/result.html.twig
+++ b/templates/profile/result.html.twig
@@ -75,12 +75,12 @@
 {#                <td>100 руб</td>#}
 {#            </tr>#}
 
-{#            <tr>#}
-{#                <th>Комментарии</th>#}
-{#                <td>Бесплатно</td>#}
-{#                <td>500 руб</td>#}
-{#                <td>100 руб</td>#}
-{#            </tr>#}
+            <tr>
+                <th class="align-middle">Комментарии</th>
+                {% for tariff in tariffs %}
+                    <td class="align-middle">{{ tariff.getComment() }}</td>
+                {% endfor %}
+            </tr>
         </tbody>
     </table>
 </div>
