--- a/templates/profile/result.html.twig
+++ b/templates/profile/result.html.twig
@@ -40,40 +40,40 @@
                 {% endfor %}
             </tr>
 
-{#            <tr>#}
-{#                <th>Прием на БК/касса</th>#}
-{#                <td>Бесплатно</td>#}
-{#                <td>500 руб</td>#}
-{#                <td>100 руб</td>#}
-{#            </tr>#}
+            <tr>
+                <th class="align-middle">Прием на Прием на баковская карта/касса</th>
+                {% for tariff in tariffs %}
+                    <td class="align-middle"></td>
+                {% endfor %}
+            </tr>
 
-{#            <tr>#}
-{#                <th>Выдача с БК</th>#}
-{#                <td>Бесплатно</td>#}
-{#                <td>500 руб</td>#}
-{#                <td>100 руб</td>#}
-{#            </tr>#}
+            <tr>
+                <th class="align-middle">Выдача с банковской карты</th>
+                {% for tariff in tariffs %}
+                    <td class="align-middle"></td>
+                {% endfor %}
+            </tr>
 
-{#            <tr>#}
-{#                <th>Бесплатные ПП</th>#}
-{#                <td>Бесплатно</td>#}
-{#                <td>500 руб</td>#}
-{#                <td>100 руб</td>#}
-{#            </tr>#}
+            <tr>
+                <th class="align-middle">Бесплатные платежные поручения</th>
+                {% for tariff in tariffs %}
+                    <td class="align-middle"></td>
+                {% endfor %}
+            </tr>
 
-{#            <tr>#}
-{#                <th>Перевод на ФЛ</th>#}
-{#                <td>Бесплатно</td>#}
-{#                <td>500 руб</td>#}
-{#                <td>100 руб</td>#}
-{#            </tr>#}
+            <tr>
+                <th class="align-middle">Перевод на физическое лицо</th>
+                {% for tariff in tariffs %}
+                    <td class="align-middle"></td>
+                {% endfor %}
+            </tr>
 
-{#            <tr>#}
-{#                <th>Выдача по чеку</th>#}
-{#                <td>Бесплатно</td>#}
-{#                <td>500 руб</td>#}
-{#                <td>100 руб</td>#}
-{#            </tr>#}
+            <tr>
+                <th class="align-middle">Выдача по чеку</th>
+                {% for tariff in tariffs %}
+                    <td class="align-middle"></td>
+                {% endfor %}
+            </tr>
 
             <tr>
                 <th class="align-middle">Комментарии</th>
