--- a/templates/profile/result.html.twig
+++ b/templates/profile/result.html.twig
@@ -57,7 +57,7 @@
             <tr>
                 <th class="align-middle">Бесплатные платежные поручения</th>
                 {% for tariff in tariffs %}
-                    <td class="align-middle"></td>
+                    <td class="align-middle">{{ tariff.getErrands() }}</td>
                 {% endfor %}
             </tr>
 
