--- a/templates/profile/result.html.twig
+++ b/templates/profile/result.html.twig
@@ -71,7 +71,7 @@
             <tr>
                 <th class="align-middle">Выдача по чеку</th>
                 {% for tariff in tariffs %}
-                    <td class="align-middle"></td>
+                    <td class="align-middle">{{ tariff.getCheck() }}</td>
                 {% endfor %}
             </tr>
 
