--- a/templates/profile/result.html.twig
+++ b/templates/profile/result.html.twig
@@ -6,8 +6,8 @@
         <thead>
             <tr>
                 <th>Банк</th>
-                {% for bank in banks %}
-                    <th colspan="{{ bank.getCountTariffs() }}">{{ bank.getName() }}</th>
+                {% for tariff in tariffs %}
+                    <th colspan="1">{{ tariff.getTariff().getBank().getName() }}</th>
                 {% endfor %}
             </tr>
         </thead>
@@ -79,6 +79,13 @@
                 <th class="align-middle">Комментарии</th>
                 {% for tariff in tariffs %}
                     <td class="align-middle">{{ tariff.getTariff().getComment() }}</td>
+                {% endfor %}
+            </tr>
+
+            <tr>
+                <th class="align-middle">Итоговая стоимость (*)</th>
+                {% for tariff in tariffs %}
+                    <td class="align-middle">{{ tariff.getCost() }}</td>
                 {% endfor %}
             </tr>
         </tbody>
