--- a/templates/profile/result.html.twig
+++ b/templates/profile/result.html.twig
@@ -55,7 +55,7 @@
             </tr>
 
             <tr>
-                <th class="align-middle">Бесплатные платежные поручения (*)</th>
+                <th class="align-middle">Платежные поручения (*)</th>
                 {% for tariff in tariffs %}
                     <td class="align-middle">{{ tariff.getErrands() }}</td>
                 {% endfor %}
