--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -4,6 +4,8 @@
 
 <div class="col-5 mx-auto">
     {{ form_start(form) }}
+        {{ form_row(form.banks, {label_attr: {class: 'checkbox-custom'} }) }}
+
         {{ form_widget(form) }}
 
         <button type="submit" class="btn btn-primary">Подобрать тарифы</button>
